Product Preview Card Component

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -14,7 +13,6 @@
 
     <title>Frontend Mentor | Product preview card component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -33,7 +31,9 @@
               <span class="price">$149.99</span>
               <span class="discount">$169.99</span>
             </p>
-            <button class="btn"><img src="./images/icon-cart.svg" alt=""> Add to Cart</button>
+            <button class="btn">
+              <img src="./images/icon-cart.svg" alt="" /> Add to Cart
+            </button>
           </div>
         </div>
       </div>
